--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <h2 id="heading">Student Registration Form</h2>
             <form onsubmit="return handleSubmit()">
                 <label for="id">ID</label>
-                <input placeholder="Enter ID" required id="id" name="id" type="number"> <br>
+                <input placeholder="Enter ID" required id="id"  type="number"> <br>
                 <label for="name">Name</label>
-                <input placeholder="John Doe" required id="name" name="name" type="text"> <br>
+                <input placeholder="John Doe" required id="name" type="text"> <br>
                 <label for="email">Email</label>
-                <input placeholder="abc@gmail.com" required id="email" name="email" type="email"> <br>
+                <input placeholder="abc@gmail.com" required id="email"  type="email"> <br>
                 <label for="phone">Phone</label>
-                <input placeholder="98765-98765" required id="phone" name="number" type="number"> <br>
+                <input placeholder="98765-98765" required id="phone"  type="number"> <br>
                 <button id="update" type="submit">Submit</button>
             </form>
         </div>
