--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </form>
         </div>
         <div class="right">
-            <img src="https://media.istockphoto.com/id/1224778182/vector/education-in-business-concept-vector-flat-illustration-test-exam-on-paper-hand-hold-task.jpg?s=612x612&w=0&k=20&c=SneFo62CVRm7bsDC57pERDbsALOjFbiqfUh31kUlCvk="
+            <img src="books.png"
                 alt="Registration Image">
         </div>
     </div>
